﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version 3.2.0 (v3.2.0 RTM)

	Improvements/Changes:
		-[WCF] WCF services can now be resolved as interfaces by specifying them in the Service attribute
		 of the	ServiceHost tag of the SVC file. (fixes #220)


Version 3.1.4 (v3.1.4 RTM) 2016-05-01

	Bug fixes:
		-[Core] Torn lifestyle was invalidly thrown when multiple InstanceProducers for the same service
		 type where wrapped with multiple decorators. (fixes #228)


Version 3.1.3 (v3.1.3 RTM) 2016-04-12

	Improvements/Changes:
		-[Web] SimpleInjector.Integration.Web NuGet package now references the Microsoft.Web.Infrastructure
		 NuGet package instead of the Microsoft.Web.Infrastructure.dll from the GAC. (fixes #170)
		-[Core] URL to documentation added to "container can't be changed" exception message. (fixes #177)
		-[Core] Improved exception message when resolving unregistered collections. (fixes #204)

	Bug fixes:
		-[Core] Registration of conditional closed-generic types prevented when container allows
		 overriding registrations. (fixes #216)
		-[WCF] WCF integration failed to create WCF services marked with InstanceContextMode.Single.
		 (fixes #197)
		-[Core] Mixing conditional and unconditional registrations for same closed-generic type did not fail
		 at registration time. (fixes #217)
		-[Core] Conditional registration for closed-generic types replaced earlier registrations instead of 
		 being appended. (fixes #186)


Version 3.1.2 (v3.1.2 RTM) 2015-12-13

	Improvements/Changes:
		-[Core] DNXCORE50/CoreCLR version available. (fixes #57)
		-[LifetimeScoping] DNXCORE50/CoreCLR version available. (fixes #57)
		-[ExecutionContextScoping] DNXCORE50/CoreCLR version available. (fixes #57)
		-[Core] Memory usage of Scope instances reduced after scope is disposed. (fixes #160)

	Bug fixes:
		-[LifetimeScoping] GetCurrentLifetimeScope() will never return disposed scopes anymore. (fixes #159)