@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013-2014 Simple Injector Contributors
+ * Copyright (c) 2013-2016 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -282,25 +282,7 @@ namespace SimpleInjector
         }
 
         // This method will never return null.
-        internal static LifetimeScopeManager GetLifetimeScopeManager(this Container container)
-        {
-            var manager = (LifetimeScopeManager)container.GetItem(ManagerKey);
-
-            if (manager == null)
-            {
-                lock (ManagerKey)
-                {
-                    manager = (LifetimeScopeManager)container.GetItem(ManagerKey);
-
-                    if (manager == null)
-                    {
-                        manager = new LifetimeScopeManager();
-                        container.SetItem(ManagerKey, manager);
-                    }
-                }
-            }
-
-            return manager;
-        }
+        internal static LifetimeScopeManager GetLifetimeScopeManager(this Container container) => 
+            container.GetOrSetItem(ManagerKey, _ => new LifetimeScopeManager());
     }
 }
